--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
             {{ content }}
             
             <footer class="site-footer">
-                &copy; Young-Chan Park. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="https://github.com/lorepirri/cayman-blog">Caymon Blog</a> theme.
+                &copy; Young-Chan Park. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="https://github.com/lorepirri/cayman-blog">Cayman Blog</a> theme.
             
                 <!-- SVG icons from https://iconmonstr.com -->
                 
